--- a/geomposter.tex
+++ b/geomposter.tex
@@ -1,5 +1,5 @@
 \documentclass[17pt, a0paper, landscape]{tikzposter} % See Section 3
-\tikzposterlatexaffectionproofoff % отключение вотермарки
+\tikzposterlatexaffectionproofoff % disable watermark
 
 \usepackage[T2A]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -20,7 +20,7 @@
 \usepackage{mathrsfs}
 \usetikzlibrary{arrows}
 
-% команда \bulurl для создания голубой ссылки
+% \bulurl command to make blue hyperlink
 \usepackage{xcolor}
 \usepackage[normalem]{ulem}
 \useunder{\uline}{\ulined}{}%
@@ -42,15 +42,18 @@
 \usepackage{unicode-math}
 \setmathfont{Fira Math}
 
+% define tikzposter colors (mainly 1st one)
 \definecolorpalette{PurpleGrayBlue}{
     \definecolor{colorOne}{HTML}{D40279}
     \definecolor{colorTwo}{HTML}{7F8897}
     \definecolor{colorThree}{HTML}{006C9E}
 }
 
+% custom title configuration
 \settitle{\centering \@title}
-\title{\textcolor[HTML]{D40279}{\textbf{\Huge{Подготовка к ЕГЭ по математике: планиметрия}}}}  % See Section 4.1
+\title{\textcolor[HTML]{D40279}{\textbf{\Huge{Подготовка к ЕГЭ по математике: планиметрия}}}}
 
+% the following bit of code adds logo blocks on the left and right to the title
 \makeatletter
 \newcommand\insertlogoi[2][]{\def\@insertlogoi{\includegraphics[#1]{#2}}}
 \newcommand\insertlogoii[2][]{\def\@insertlogoii{\includegraphics[#1]{#2}}}
@@ -58,7 +61,7 @@
 \setlength\LogoSep{0pt}
 
 \insertlogoi[width=10cm]{figures/logo.pdf}
-\insertlogoii[width=5cm]{example-image-b}
+\insertlogoii[width=5cm]{example-image-b} % I inserted my hyperlink instead of the logo on the right so this line is not used
 
 \renewcommand\maketitle[1][]{  % #1 keys
     \normalsize
@@ -94,7 +97,7 @@
 
     \node[inner sep=400pt,anchor=east] 
       at ([xshift=\LogoSep]title.east)
-      {\Huge\bulurl{https://plucik.ru/}};
+      {\Huge\bulurl{https://plucik.ru/}}; %\@insertlogoii if you want to have 2nd logo on the right
 
     % Settings for blocks
     \normalsize
@@ -106,20 +109,12 @@
 \usetitlestyle{Default}
 \useblockstyle{TornOut}
 
+% parallel sign
 \newcommand{\parallelsum}{\mathbin{\|}}
-
-\begin{comment} Этих блоков нету
-\block{Отношение площадей подобных фигур}
-{
-$$k \text{ - коэффициент подобия, } \quad \frac {S_1} {S_2} = k^2$$
-\begin{center}
-\input{figures/area_similar_plain.tex}
-\end{center}
-}
-\end{comment}
 
 \begin{document}
 
+% define colors for geogebra imported tikz images
 \definecolor{atfczz}{rgb}{0,0.6,0}
 \definecolor{fruycc}{rgb}{0.8313725490196079,0.00784313725490196,0.4745098039215686}
 \definecolor{qqwuqq}{rgb}{0,0.6,0}
@@ -131,6 +126,7 @@ $$k \text{ - коэффициент подобия, } \quad \frac {S_1} {S_2} = 
 
 \maketitle
 
+% main body of the document, pretty straightforward
 \begin{columns}
 \column{0.166}
 \block{Теорема Фалеса}
@@ -365,4 +361,5 @@ $ABCD$ - описанный $\iff AB + CD = BC + AD$\\
 }
 
 \end{columns}
+
 \end{document}
